# rhaster-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/private/framework/resource/sound/: SdlAudio.h
lib/include/private/rst/__internal/diagnostic/: log.h
lib/include/private/rst/__internal/resource/: sdl_audio.h  sdl_pelt.h
lib/include/private/rst/__resource_type/sound/: sdl_audio.h
lib/include/private/rst/__type/sound/: sdl_audio.h
lib/include/private/rst/__type/sound_type/: sdl_audio.h
lib/include/public/core/: Minigin.h  UID.h  imgui_core.h  type_utility.hpp
lib/include/public/core/meta/: binding_traits.h  concepts.h
lib/include/public/framework/: Deletable.h  GameObject.h  GameObjectView.h  Scene.h  Transform.h
lib/include/public/framework/behaviour/fsm/: FiniteMultiStateMachine.h  FiniteStateMachine.h  transitions.h
lib/include/public/framework/binding/: InputBuffer.h  InputMappingContext.h  binding_controls.h  binding_device.h  binding_types.h
lib/include/public/framework/binding/command/: Command.h  GameObjectCommand.h
lib/include/public/framework/component/: AudioComponent.h  Component.h  TextComponent.h  TextureComponent.h
lib/include/public/framework/component/physics/: BoxColliderComponent.h  ColliderComponent.h  PhysicsComponent.h
lib/include/public/framework/controller/: BaseController.h  PlayerController.h
lib/include/public/framework/event/: Dispatcher.h  EventQueue.h  MulticastDelegate.h  Observer.h  Subject.h
lib/include/public/framework/resource/: Font.h
lib/include/public/framework/resource/data/: Blackboard.h  Deleter.h  OptionalRef.h  SafeResource.h  SparseSet.h
lib/include/public/framework/resource/sound/: Audio.h
lib/include/public/framework/resource/texture/: Sprite2D.h  Texture2D.h
lib/include/public/framework/ui_component/: InputDisplayUIComponent.h  UIComponent.h
lib/include/public/rst/: core.h  diagnostic.h  fsm.h  pch.h
lib/include/public/rst/__command/: command.h  gameobject_command.h
lib/include/public/rst/__controller/: base_controller.h  player_controller.h
lib/include/public/rst/__core/: component.h  deletable.h  earmark.h  ecs.h  gameobject.h  hare.h  scene.h  service.h  system.h  test.h  transform.h  uid.h
lib/include/public/rst/__core/__ecs/: component_constraints.h  ecs_error.h  entity.h  entity_allocator.h  entity_handle.h  registry.h  registry_pool.h  view.h
lib/include/public/rst/__core/__service/: renderer_service.h  service_info.h  service_locator.h  sound_service.h
lib/include/public/rst/__core/__system/: base_system.h  renderer_system.h  system_scheduler.h  system_timing.h
lib/include/public/rst/__core/component/: pelt_frame.h  transform.h
lib/include/public/rst/__core/ecs/: component_pool.h  entity_allocator.cpp  entity_allocator.h  entity_handle.h  registry.h  view.h
lib/include/public/rst/__core/resource/: audio.h  pelt.h  pelt_batch.h
lib/include/public/rst/__diagnostic/: warren.h
lib/include/public/rst/__diagnostic/__warren/: alert.h  ensure.h  notice.h  (+1 more)
lib/include/public/rst/__event/: dispatcher.h  event_queue.h  multicast_delegate.h  observer.h  scoped_binding.h  subject.h
lib/include/public/rst/__input/: binding_device.h  input_buffer.h  input_mapping_context.h  input_merge.h  input_type.h
lib/include/public/rst/__service/: service_info.h
lib/include/public/rst/data_type/: blackboard.h  data_structure_error.h  optional_ref.h  ref_proxy.h  safe_resource.h  sparse_set.h  token_generator.h  unique_ref.h
lib/include/public/rst/framework/: data_type.h  event_queue.h  multicast_delegate.h  observer.h  resource_type.h
lib/include/public/rst/meta/: address.h  algorithm.h  function_traits.h  hash.h  reference.h  tuple.h  type_hash.h  type_name.h  type_traits.h
lib/include/public/rst/type/: deleter.h  safe_resource.h  sparse_set.h
lib/include/public/service/: service_info.h
lib/include/public/service/sound/: ParallelSoundSystem.h  SdlSoundSystem.h  SoundSystem.h  SoundSystemLogger.h
lib/include/public/singleton/: GameInstance.h  GameTime.h  InputSystem.h  Renderer.h  ResourceManager.h  ScenePool.h  ServiceLocator.h  Singleton.h  UIController.h
lib/src/: alert.cpp  audio.cpp  audio_component.cpp  binding_device.cpp  box_collider_component.cpp  collider_component.cpp  component.cpp  earmark.cpp  entity_allocator.cpp  finite_multi_state_machine.cpp  finite_state_machine.cpp  font.cpp  game_instance.cpp  game_time.cpp  gameobject.cpp  hare.cpp  input_buffer.cpp  input_mapping_context.cpp  input_merge.cpp  input_system.cpp  notice.cpp  parallel_sound_system.cpp  pelt_batch.cpp  physics_component.cpp  player_controller.cpp  renderer.cpp  renderer_system.cpp  resource_manager.cpp  scene.cpp  scene_pool.cpp  sdl_audio.cpp  sdl_erasure.cpp  sdl_pelt.cpp  sdl_renderer_service.cpp  sdl_sound_system.cpp  service_locator.cpp  sound_system_logger.cpp  sprite2D.cpp  state_stack.cpp  subject.cpp  (+4 more)
lib/src/core/: Minigin.cpp  imgui_core_dwn.cpp  imgui_core_win.cpp
lib/src/framework/: GameObject.cpp  GameObjectView.cpp  Scene.cpp  Transform.cpp
lib/src/framework/behaviour/fsm/: FiniteMultiStateMachine.cpp  FiniteStateMachine.cpp
lib/src/framework/binding/: InputBuffer.cpp  InputMappingContext.cpp  binding_controls.cpp  binding_device.cpp
lib/src/framework/component/: AudioComponent.cpp  Component.cpp  TextComponent.cpp  TextureComponent.cpp
lib/src/framework/component/physics/: BoxColliderComponent.cpp  ColliderComponent.cpp  PhysicsComponent.cpp
lib/src/framework/controller/: PlayerController.cpp
lib/src/framework/event/: Subject.cpp
lib/src/framework/resource/: Font.cpp
lib/src/framework/resource/sound/: Audio.cpp  SdlAudio.cpp
lib/src/framework/resource/texture/: Sprite2D.cpp  Texture2D.cpp
lib/src/framework/ui_component/: InputDisplayUIComponent.cpp  UIComponent.cpp
lib/src/service/sound/: ParallelSoundSystem.cpp  SdlSoundSystem.cpp  SoundSystemLogger.cpp
lib/src/singleton/: GameInstance.cpp  GameTime.cpp  InputSystem.cpp  Renderer.cpp  ResourceManager.cpp  ScenePool.cpp  ServiceLocator.cpp  UIController.cpp
(+80 files in other folders)
